--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
-body {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-		Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-		sans-serif;
-	background-color: #f7f7f7;
-	color: #444;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* https://dev.to/afif/i-made-100-more-css-loaders-for-your-next-project-4ioa */
 .spinner {
