--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+	.input {
+		@apply w-full rounded-full border border-stone-200 px-4 py-2 text-sm transition-all duration-300 focus:outline-none focus:ring focus:ring-yellow-400 md:px-6 md:py-3;
+	}
+}
+
 /* https://dev.to/afif/i-made-100-more-css-loaders-for-your-next-project-4ioa */
 .spinner {
 	width: 80px;
